Add Swagger documetation for Games and Platforms endpoints
